yan/antlr/generated/YanParser.py
# Generated from Yan.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YanParser ( Parser ):

    grammarFileName = "Yan.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\u82E5'", "'\\u5219'", "'\\u5426\\u5219'", 
                     "'\\u5B9A'", "'\\u51FD'", "'\\u771F'", "'\\u5047'", 
                     "'\\u7A7A'", "'\\u904D\\u5386'", "'\\u4E8E'", "'\\u5F53'", 
                     "'\\u7B49\\u4E8E'", "'\\u5370'", "'\\u52A0'", "'\\u51CF'", 
                     "'\\u4E58'", "'\\u9664'", "'\\u6A21'", "'\\u5E42'", 
                     "'\\u7EDD\\u5BF9'", "'\\u8D1F'", "'\\u5927'", "'\\u5C0F'", 
                     "'\\u7B49'", "'\\u4E0D\\u7B49'", "'\\u4E14'", "'\\u6216'", 
                     "'\\u975E'", "'\\u9996'", "'\\u4F59'", "'\\u5165'", 
                     "'\\u957F'", "'\\u8FDE'", "'\\u542B'", "'\\u7686'", 
                     "'\\u53EA'", "'\\u5F52'", "'='", "'\\u3002'", "'\\uFF1B'", 
                     "'\\uFF0C'", "'\\uFF1A'", "'''" ]

    symbolicNames = [ "<INVALID>", "IF", "THEN", "ELSE", "DEFINE", "FUNC", 
                      "TRUE", "FALSE", "NIL", "FOREACH", "IN", "WHILE", 
                      "DENGYU", "PRINT", "ADD", "SUB", "MUL", "DIV", "MOD", 
                      "POW", "ABS", "NEG", "GT", "LT", "EQ", "NE", "AND", 
                      "OR", "NOT", "HEAD", "TAIL", "APPEND", "LEN", "CONCAT", 
                      "CONTAINS", "MAP", "FILTER", "REDUCE", "EQUALS", "DOT", 
                      "SEMI", "COMMA", "COLON", "QUOTE", "MATH", "PYTHON", 
                      "STRING", "NUMBER", "ID", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_defineStmt = 2
    RULE_value = 3
    RULE_lambda = 4
    RULE_block = 5
    RULE_exprStmt = 6
    RULE_expression = 7
    RULE_thenBranch = 8
    RULE_elseBranch = 9
    RULE_pipeline = 10
    RULE_expr = 11
    RULE_verbCall = 12
    RULE_infixExpr = 13
    RULE_atom = 14

    ruleNames =  [ "program", "statement", "defineStmt", "value", "lambda", 
                   "block", "exprStmt", "expression", "thenBranch", "elseBranch", 
                   "pipeline", "expr", "verbCall", "infixExpr", "atom" ]

    EOF = Token.EOF
    IF=1
    THEN=2
    ELSE=3
    DEFINE=4
    FUNC=5
    TRUE=6
    FALSE=7
    NIL=8
    FOREACH=9
    IN=10
    WHILE=11
    DENGYU=12
    PRINT=13
    ADD=14
    SUB=15
    MUL=16
    DIV=17
    MOD=18
    POW=19
    ABS=20
    NEG=21
    GT=22
    LT=23
    EQ=24
    NE=25
    AND=26
    OR=27
    NOT=28
    HEAD=29
    TAIL=30
    APPEND=31
    LEN=32
    CONCAT=33
    CONTAINS=34
    MAP=35
    FILTER=36
    REDUCE=37
    EQUALS=38
    DOT=39
    SEMI=40
    COMMA=41
    COLON=42
    QUOTE=43
    MATH=44
    PYTHON=45
    STRING=46
    NUMBER=47
    ID=48
    WS=49
    COMMENT=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(YanParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YanParser.StatementContext)
            else:
                return self.getTypedRuleContext(YanParser.StatementContext,i)


        def getRuleIndex(self):
            return YanParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = YanParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 556078005742546) != 0):
                self.state = 30
                self.statement()
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.match(YanParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defineStmt(self):
            return self.getTypedRuleContext(YanParser.DefineStmtContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(YanParser.ExprStmtContext,0)


        def DOT(self):
            return self.getToken(YanParser.DOT, 0)

        def SEMI(self):
            return self.getToken(YanParser.SEMI, 0)

        def getRuleIndex(self):
            return YanParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = YanParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 42
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.defineStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.exprStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.match(YanParser.DOT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 41
                self.match(YanParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefineStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YanParser.RULE_defineStmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DefineWithoutKeywordContext(DefineStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YanParser.DefineStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(YanParser.ID, 0)
        def EQUALS(self):
            return self.getToken(YanParser.EQUALS, 0)
        def value(self):
            return self.getTypedRuleContext(YanParser.ValueContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefineWithoutKeyword" ):
                return visitor.visitDefineWithoutKeyword(self)
            else:
                return visitor.visitChildren(self)


    class DefineWithDengyuContext(DefineStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YanParser.DefineStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(YanParser.ID, 0)
        def DENGYU(self):
            return self.getToken(YanParser.DENGYU, 0)
        def value(self):
            return self.getTypedRuleContext(YanParser.ValueContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefineWithDengyu" ):
                return visitor.visitDefineWithDengyu(self)
            else:
                return visitor.visitChildren(self)


    class DefineWithKeywordContext(DefineStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YanParser.DefineStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DEFINE(self):
            return self.getToken(YanParser.DEFINE, 0)
        def ID(self):
            return self.getToken(YanParser.ID, 0)
        def EQUALS(self):
            return self.getToken(YanParser.EQUALS, 0)
        def value(self):
            return self.getTypedRuleContext(YanParser.ValueContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefineWithKeyword" ):
                return visitor.visitDefineWithKeyword(self)
            else:
                return visitor.visitChildren(self)



    def defineStmt(self):

        localctx = YanParser.DefineStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_defineStmt)
        try:
            self.state = 54
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = YanParser.DefineWithKeywordContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 44
                self.match(YanParser.DEFINE)
                self.state = 45
                self.match(YanParser.ID)
                self.state = 46
                self.match(YanParser.EQUALS)
                self.state = 47
                self.value()
                pass

            elif la_ == 2:
                localctx = YanParser.DefineWithoutKeywordContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.match(YanParser.ID)
                self.state = 49
                self.match(YanParser.EQUALS)
                self.state = 50
                self.value()
                pass

            elif la_ == 3:
                localctx = YanParser.DefineWithDengyuContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.match(YanParser.ID)
                self.state = 52
                self.match(YanParser.DENGYU)
                self.state = 53
                self.value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lambda_(self):
            return self.getTypedRuleContext(YanParser.LambdaContext,0)


        def expression(self):
            return self.getTypedRuleContext(YanParser.ExpressionContext,0)


        def getRuleIndex(self):
            return YanParser.RULE_value

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = YanParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_value)
        try:
            self.state = 58
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.lambda_()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LambdaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YanParser.RULE_lambda

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LambdaIdWithBlockContext(LambdaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YanParser.LambdaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(YanParser.ID)
            else:
                return self.getToken(YanParser.ID, i)
        def COLON(self):
            return self.getToken(YanParser.COLON, 0)
        def block(self):
            return self.getTypedRuleContext(YanParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLambdaIdWithBlock" ):
                return visitor.visitLambdaIdWithBlock(self)
            else:
                return visitor.visitChildren(self)


    class LambdaWithBlockContext(LambdaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YanParser.LambdaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FUNC(self):
            return self.getToken(YanParser.FUNC, 0)
        def COLON(self):
            return self.getToken(YanParser.COLON, 0)
        def block(self):
            return self.getTypedRuleContext(YanParser.BlockContext,0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(YanParser.ID)
            else:
                return self.getToken(YanParser.ID, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLambdaWithBlock" ):
                return visitor.visitLambdaWithBlock(self)
            else:
                return visitor.visitChildren(self)


    class LambdaWithExprContext(LambdaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YanParser.LambdaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FUNC(self):
            return self.getToken(YanParser.FUNC, 0)
        def expression(self):
            return self.getTypedRuleContext(YanParser.ExpressionContext,0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(YanParser.ID)
            else:
                return self.getToken(YanParser.ID, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLambdaWithExpr" ):
                return visitor.visitLambdaWithExpr(self)
            else:
                return visitor.visitChildren(self)


    class LambdaIdWithExprContext(LambdaContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YanParser.LambdaContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(YanParser.ID)
            else:
                return self.getToken(YanParser.ID, i)
        def expression(self):
            return self.getTypedRuleContext(YanParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLambdaIdWithExpr" ):
                return visitor.visitLambdaIdWithExpr(self)
            else:
                return visitor.visitChildren(self)



    def lambda_(self):

        localctx = YanParser.LambdaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lambda)
        self._la = 0 # Token type
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = YanParser.LambdaWithBlockContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.match(YanParser.FUNC)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==48:
                    self.state = 61
                    self.match(YanParser.ID)
                    self.state = 66
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 67
                self.match(YanParser.COLON)
                self.state = 68
                self.block()
                pass

            elif la_ == 2:
                localctx = YanParser.LambdaWithExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.match(YanParser.FUNC)
                self.state = 73
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 70
                        self.match(YanParser.ID) 
                    self.state = 75
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

                self.state = 76
                self.expression()
                pass

            elif la_ == 3:
                localctx = YanParser.LambdaIdWithBlockContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.match(YanParser.ID)
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==48:
                    self.state = 78
                    self.match(YanParser.ID)
                    self.state = 83
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 84
                self.match(YanParser.COLON)
                self.state = 85
                self.block()
                pass

            elif la_ == 4:
                localctx = YanParser.LambdaIdWithExprContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.match(YanParser.ID)
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 87
                        self.match(YanParser.ID) 
                    self.state = 92
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                self.state = 93
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOT(self):
            return self.getToken(YanParser.DOT, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YanParser.StatementContext)
            else:
                return self.getTypedRuleContext(YanParser.StatementContext,i)


        def getRuleIndex(self):
            return YanParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = YanParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 96
                    self.statement()

                else:
                    raise NoViableAltException(self)
                self.state = 99 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 101
            self.match(YanParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(YanParser.ExpressionContext,0)


        def getRuleIndex(self):
            return YanParser.RULE_exprStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)




    def exprStmt(self):

        localctx = YanParser.ExprStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_exprStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return YanParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YanParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(YanParser.WHILE, 0)
        def expr(self):
            return self.getTypedRuleContext(YanParser.ExprContext,0)

        def COLON(self):
            return self.getToken(YanParser.COLON, 0)
        def block(self):
            return self.getTypedRuleContext(YanParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileExpr" ):
                return visitor.visitWhileExpr(self)
            else:
                return visitor.visitChildren(self)


    class IfExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YanParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(YanParser.IF, 0)
        def expr(self):
            return self.getTypedRuleContext(YanParser.ExprContext,0)

        def THEN(self):
            return self.getToken(YanParser.THEN, 0)
        def thenBranch(self):
            return self.getTypedRuleContext(YanParser.ThenBranchContext,0)

        def elseBranch(self):
            return self.getTypedRuleContext(YanParser.ElseBranchContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfExpr" ):
                return visitor.visitIfExpr(self)
            else:
                return visitor.visitChildren(self)


    class PipelineExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YanParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def pipeline(self):
            return self.getTypedRuleContext(YanParser.PipelineContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPipelineExpr" ):
                return visitor.visitPipelineExpr(self)
            else:
                return visitor.visitChildren(self)


    class ForeachExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a YanParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FOREACH(self):
            return self.getToken(YanParser.FOREACH, 0)
        def ID(self):
            return self.getToken(YanParser.ID, 0)
        def IN(self):
            return self.getToken(YanParser.IN, 0)
        def expr(self):
            return self.getTypedRuleContext(YanParser.ExprContext,0)

        def COLON(self):
            return self.getToken(YanParser.COLON, 0)
        def block(self):
            return self.getTypedRuleContext(YanParser.BlockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForeachExpr" ):
                return visitor.visitForeachExpr(self)
            else:
                return visitor.visitChildren(self)



    def expression(self):

        localctx = YanParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.state = 125
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                localctx = YanParser.IfExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(YanParser.IF)
                self.state = 106
                self.expr()
                self.state = 107
                self.match(YanParser.THEN)
                self.state = 108
                self.thenBranch()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 109
                    self.elseBranch()


                pass
            elif token in [9]:
                localctx = YanParser.ForeachExprContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(YanParser.FOREACH)
                self.state = 113
                self.match(YanParser.ID)
                self.state = 114
                self.match(YanParser.IN)
                self.state = 115
                self.expr()
                self.state = 116
                self.match(YanParser.COLON)
                self.state = 117
                self.block()
                pass
            elif token in [11]:
                localctx = YanParser.WhileExprContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.match(YanParser.WHILE)
                self.state = 120
                self.expr()
                self.state = 121
                self.match(YanParser.COLON)
                self.state = 122
                self.block()
                pass
            elif token in [6, 7, 8, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 43, 44, 45, 46, 47, 48]:
                localctx = YanParser.PipelineExprContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 124
                self.pipeline()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThenBranchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(YanParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(YanParser.BlockContext,0)


        def expr(self):
            return self.getTypedRuleContext(YanParser.ExprContext,0)


        def getRuleIndex(self):
            return YanParser.RULE_thenBranch

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThenBranch" ):
                return visitor.visitThenBranch(self)
            else:
                return visitor.visitChildren(self)




    def thenBranch(self):

        localctx = YanParser.ThenBranchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_thenBranch)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [42]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(YanParser.COLON)
                self.state = 128
                self.block()
                pass
            elif token in [6, 7, 8, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 43, 44, 45, 46, 47, 48]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.expr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseBranchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(YanParser.ELSE, 0)

        def COLON(self):
            return self.getToken(YanParser.COLON, 0)

        def block(self):
            return self.getTypedRuleContext(YanParser.BlockContext,0)


        def expr(self):
            return self.getTypedRuleContext(YanParser.ExprContext,0)


        def getRuleIndex(self):
            return YanParser.RULE_elseBranch

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseBranch" ):
                return visitor.visitElseBranch(self)
            else:
                return visitor.visitChildren(self)




    def elseBranch(self):

        localctx = YanParser.ElseBranchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_elseBranch)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.match(YanParser.ELSE)
                self.state = 133
                self.match(YanParser.COLON)
                self.state = 134
                self.block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.match(YanParser.ELSE)
                self.state = 136
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PipelineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YanParser.ExprContext)
            else:
                return self.getTypedRuleContext(YanParser.ExprContext,i)

